# unCaptcha

./: .gitignore  .gitmodules  CMakeLists.txt  Model.cpp  Model.h  README.md  helpers.cpp  helpers.h  main.cpp
include/: Model.h  helpers.h
lib/: helpers.cpp  main.cpp
